feat: handle inventory events
